Revert "Fix command-line syntax"
This reverts commit 142b85f483113bfff5b738ba4a18b0b333be701a.